--- a/package.xml
+++ b/package.xml
@@ -426,6 +426,7 @@
         <members>Livre__c.Nb_de_pages__c</members>
         <members>Livre__c.Producteur__c</members>
         <members>Livre__c.Tel_auteur__c</members>
+        <members>Livre__c.Tel_editeur__c</members>
         <members>Livre__c.adresse_auteur__c</members>
         <members>Livre__c.email_auteur__c</members>
         <members>Macro.Description</members>
