--- a/package.xml
+++ b/package.xml
@@ -427,6 +427,7 @@
         <members>Livre__c.Producteur__c</members>
         <members>Livre__c.Tel_auteur__c</members>
         <members>Livre__c.Tel_editeur__c</members>
+        <members>Livre__c.Type__c</members>
         <members>Livre__c.adresse_auteur__c</members>
         <members>Livre__c.email_auteur__c</members>
         <members>Livre__c.email_editeur__c</members>
