--- a/package.xml
+++ b/package.xml
@@ -435,6 +435,7 @@
         <members>Livre__c.adresse_auteur__c</members>
         <members>Livre__c.email_auteur__c</members>
         <members>Livre__c.email_editeur__c</members>
+        <members>Livre__c.nombre_pages__c</members>
         <members>Macro.Description</members>
         <members>Macro.Name</members>
         <members>Macro.OwnerId</members>
