--- a/package.xml
+++ b/package.xml
@@ -426,6 +426,7 @@
         <members>LeadCleanInfo.Industry</members>
         <members>Livre__c.Auteur__c</members>
         <members>Livre__c.Ecrivain__c</members>
+        <members>Livre__c.Fabien__c</members>
         <members>Livre__c.Nb_chapitre__c</members>
         <members>Livre__c.Nb_de_pages__c</members>
         <members>Livre__c.Producteur__c</members>
