--- a/package.xml
+++ b/package.xml
@@ -429,6 +429,7 @@
         <members>Livre__c.Fabien__c</members>
         <members>Livre__c.Nb_chapitre__c</members>
         <members>Livre__c.Nb_de_pages__c</members>
+        <members>Livre__c.Olivier__c</members>
         <members>Livre__c.Producteur__c</members>
         <members>Livre__c.Tel_auteur__c</members>
         <members>Livre__c.Tel_editeur__c</members>
